Fixed bug that prevented compilation under windows. ECL is now built as a single shared library on systems which support it. The compiler is being rewritten using higher level, more expressive functions.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -57,11 +57,11 @@ ecl$(EXE): ecl_min$(EXE) compile.lsp sysfun.lsp
 		./ecl_min < compile.lsp; \
 	fi
 
-ecl_min$(EXE): $(LIBRARIES) .gdbinit
+ecl_min$(EXE): $(LIBRARIES) .gdbinit libecl.a
 	if [ -f CROSS-COMPILER ]; then \
 		touch $@; \
 	else \
-		$(CC) $(LDFLAGS) -o $@ c/cinit.o -L./ $(LIBRARIES) $(LIBS);\
+		$(CC) $(LDFLAGS) -o $@ c/cinit.o -L./ libecl.a $(LIBRARIES) $(LIBS);\
 	fi
 
 .gdbinit: $(srcdir)/util/gdbinit
