--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -21,6 +21,9 @@
 
 /* Use Boehm's garbage collector					*/
 #undef GBC_BOEHM
+#ifdef GBC_BOEHM
+#define ECL_DYNAMIC_VV
+#endif
 
 /* Userland threads?							*/
 #undef THREADS
