--- a/src/configure.in
+++ b/src/configure.in
@@ -134,7 +134,7 @@ dnl ----------------------------------------------------------------------
 dnl           checks for header files
 dnl
 dnl AC_CHECK_HEADERS(unistd.h stdlib.h stdarg.h string.h)
-AC_CHECK_HEADERS(sys/resource.h sys/utsname.h float.h pw.h dlfcn.h link.h\
+AC_CHECK_HEADERS(sys/resource.h sys/utsname.h float.h pwd.h dlfcn.h link.h\
  ulimit.h dirent.h sys/ioctl.h)
 AC_CHECK_FUNCS(nanosleep alarm times isnanf select setenv putenv\
  lstat mkstemp)
