--- a/src/configure.in
+++ b/src/configure.in
@@ -67,7 +67,7 @@ AC_ARG_WITH(gmp,
 	[--with-gmp=args        Configure supplied GMP library with arguments.],
 	[gmp_flags=${withval}; local_gmp="no"],
 	gmp_flags="")
-AC_ARG_WITH(cros_config,
+AC_ARG_WITH(cross_config,
 	[--with-config-file=f	Supply configuration for a cross compiler.],
 	cross_config="${withval}", cross_config="`pwd`/cross_config")
 dnl AC_ARG_ENABLE(locative,
@@ -95,9 +95,11 @@ AC_ARG_WITH(ffi,
 	[--with-ffi		Run-time foreign data manipulation.],
 	ffi="yes")
 AC_ARG_ENABLE(cxx,
-	[--enable-cxx           Build ECL using C++ compiler],
+	[--enable-cxx           Build ECL using C++ compiler.],
 	usecxx=${enableval},usecxx="no")
-
+AC_ARG_ENABLE(opcode8,
+	[--enable-opcode8       Interpreter uses 8-bit codes (only Intel!).],
+	opcode8=${enableval},opcode8="no")
 
 ### ----------------------------------------------------------------------
 ###           Checks for programs
@@ -241,6 +243,9 @@ if test ${usecxx} = "no" ; then
   ECL_CC="${CC}"
 else
   ECL_CC="${CXX}"
+fi
+if test ! ${opcode8} = "no" ; then
+  AC_DEFINE(ECL_SMALL_BYTECODES)
 fi
 
 dnl ---------------------------------------------------------------------
