Repair broken build process for statically linked ECL.

--- a/src/compile.lsp.in
+++ b/src/compile.lsp.in
@@ -62,7 +62,11 @@ cd ..; rm -rf tmp/* @LIBPREFIX@{lsp,clos} "))
 ;; of using -lecl. This is to avoid interference with an already
 ;; installed copy of ECL.
 ;;
-(setf c::*ld-flags* "@LDRPATH@ @SHAREDPREFIX@ecl.@SHAREDEXT@ @CLIBS@")
+#+dlopen
+(setf c::*ld-flags*
+#+dlopen "@LDRPATH@ @SHAREDPREFIX@ecl.@SHAREDEXT@ @CLIBS@"
+#-dlopen "@LDRPATH@ @LIBPREFIX@ecl.@LIBEXT@ @CLIBS@"
+)
 
 #+dlopen
 ;;
