--- a/src/configure.in
+++ b/src/configure.in
@@ -188,7 +188,11 @@ fi
 if test ${local_gmp} = "no" ; then
   LIBRARIES="${LIBRARIES} ${LIBPREFIX}gmp.${LIBEXT}"
   SUBDIR="${SUBDIR} gmp"
-else
+fi
+if test ${shared} = "no"; then
+  if test ! ${boehm} = "no"; then
+    CLIBS="-lgc ${CLIBS}"
+  fi
   CLIBS="-lgmp ${CLIBS}"
 fi
 if test ${runtime} ; then
