--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -61,7 +61,7 @@ ecl_min$(EXE): $(LIBRARIES) .gdbinit libecl.a
 	if [ -f CROSS-COMPILER ]; then \
 		touch $@; \
 	else \
-		$(CC) $(LDFLAGS) -o $@ c/cinit.o -L./ libecl.a $(LIBRARIES) $(LIBS);\
+		$(CC) $(LDFLAGS) -o $@ c/cinit.o -L./ libecl.a -lgmp $(LIBRARIES) $(LIBS);\
 	fi
 
 .gdbinit: $(srcdir)/util/gdbinit
@@ -84,21 +84,31 @@ BUILD-STAMP: config.status
 	(echo "#"; uname -a) > $@
 	head -8 config.status | tail -6 >> $@
 install: BUILD-STAMP
-	$(INSTALL) -d $(PREFIX)$(bindir) $(PREFIX)$(mandir) $(PREFIX)$(libdir)/h
+	for i in $(PREFIX)$(bindir) $(PREFIX)$(mandir) $(PREFIX)$(libdir)/h; do\
+	  $(INSTALL) -d $$i; \
+	done
+	for i in $(TARGETS); do \
+	  $(INSTALL) -s $$i $(PREFIX)$(bindir); \
+	done
 	$(INSTALL_PROGRAM) -s $(TARGETS) $(PREFIX)$(bindir)
 	$(INSTALL_PROGRAM) ecl-config $(PREFIX)$(bindir)
 	$(INSTALL_DATA) $(srcdir)/etc/ecl.1 $(PREFIX)$(mandir)
-	$(INSTALL_DATA) BUILD-STAMP $(LSP_LIBRARIES) $(LIBRARIES) $(PREFIX)$(libdir)
+	for i in BUILD-STAMP $(LSP_LIBRARIES) $(LIBRARIES) c/dpp* help.doc ; do \
+	  $(INSTALL_DATA) $$i $(PREFIX)$(libdir); \
+	done
 	$(INSTALL_DATA) h/config.h $(PREFIX)$(libdir)/h
-	$(INSTALL_DATA) c/dpp* help.doc $(PREFIX)$(libdir)
 	if (echo $(SUBDIR) | grep gc); then $(MAKE) installgc; fi
 	if (echo $(SUBDIR) | grep gmp); then $(MAKE) installgmp; fi
 	cd c; $(MAKE) PREFIX="$(PREFIX)" install
 	cd doc; $(MAKE) PREFIX="$(PREFIX)" install
 installgc:
 	$(INSTALL) -d $(PREFIX)$(libdir)/h/private
-	$(INSTALL_DATA) $(srcdir)/gc/include/*.h $(PREFIX)$(libdir)/h/
-	$(INSTALL_DATA) $(srcdir)/gc/include/private/*.h $(PREFIX)$(libdir)/h/private/
+	for i in $(srcdir)/gc/include/*.h; do \
+	  $(INSTALL_DATA) $$i $(PREFIX)$(libdir)/h/; \
+	done
+	for i in $(srcdir)/gc/include/private/*.h; do \
+	  $(INSTALL_DATA) $$i $(PREFIX)$(libdir)/h/private/; \
+	done
 installgmp:
 	$(INSTALL_DATA) h/gmp.h $(PREFIX)$(libdir)/h/
 
