--- a/src/configure.in
+++ b/src/configure.in
@@ -160,7 +160,7 @@ if test "x$exec_prefix" = "xNONE"; then exec_prefix=${prefix}; fi
 bindir="${exec_prefix}/bin"
 libdir="${exec_prefix}/lib/ecl"
 includedir="${exec_prefix}/lib/ecl/h"
-mandir="${prefix}/man/man1"
+mandir="${prefix}/man"
 infodir="${prefix}/info"
 TARGETS="ecl${EXEEXT}"
 LIBRARIES=""
@@ -359,9 +359,8 @@ dnl and then use all AC_DEF* to build h/config.h from h/configpre.h
 dnl
 AC_CONFIG_FILES(compile.lsp bare.lsp
  lsp/config.lsp cmp/cmpcfg.lsp lsp/load.lsp clos/load.lsp cmp/load.lsp
- ../Makefile Makefile c/Makefile doc/Makefile
- tk/Makefile clx/defsys.lsp tests/Makefile ansi-tests/Makefile gabriel/Makefile
- lsp/defsys.lsp cmp/defsys.lsp clos/defsys.lsp)
+ ../Makefile Makefile c/Makefile doc/Makefile doc/ecl.man
+ tk/Makefile tests/Makefile ansi-tests/Makefile gabriel/Makefile)
 AC_CONFIG_FILES([ecl-config:util/ecl-config],[chmod +x ecl-config])
 AC_CONFIG_FILES([h/configpre:h/config.h.in])
 AC_CONFIG_HEADER([h/config.h:h/configpre])
