Giusseppe should read Giuseppe.

--- a/src/doc/ecl.man.in
+++ b/src/doc/ecl.man.in
@@ -22,7 +22,7 @@ ecl \- Embeddable Common LISP
 .sp
 ECL stands for Embeddable Common-Lisp.
 The ECL project is an effort to modernize 
-Giusseppe Attardi's ECL environment to
+Giuseppe Attardi's ECL environment to
 produce an implementation of the Common-Lisp
 language which complies to the ANSI X3J13
 definition of the language.
