--- a/src/cmp/cmpcfg.lsp.in
+++ b/src/cmp/cmpcfg.lsp.in
@@ -5,9 +5,11 @@
 (in-package "COMPILER")
 (setq *cc* "@ECL_CC@")
 (setq *cc-flags* "@CFLAGS@ @LSPCFLAGS@")
-(setq *ld-flags* "@LDRPATH@ -lecl @LDFLAGS@ @CLIBS@")
+(setq *ld-flags* "@LDRPATH@ @LDFLAGS@ -lecl @CLIBS@")
 #+dlopen
-(setq *ld-shared-flags* "@SHARED_LDFLAGS@")
+(setq *ld-shared-flags* "@LDRPATH@ @SHARED_LDFLAGS@ @LDFLAGS@ -lecl @CLIBS@")
+#+dlopen
+(setq *ld-bundle-flags* "@LDRPATH@ @BUNDLE_LDFLAGS@ @LDFLAGS@ -lecl @CLIBS@")
 (eval-when (eval)
   (setq +shared-library-prefix+ "@SHAREDPREFIX@"
         +shared-library-extension+ "@SHAREDEXT@"
