--- a/src/compile.lsp.in
+++ b/src/compile.lsp.in
@@ -71,12 +71,14 @@ cd ..; rm -rf tmp/* @LIBPREFIX@{lsp,clos} "))
 ;;
 ;; We do not need the -rpath flag for the library, nor -lecl.
 ;;
-(let ((c::*ld-flags* "@CLIBS@"))
+(let ((c::*ld-shared-flags* "@SHARED_LDFLAGS@ @CLIBS@"))
   (c::shared-cc (compile-file-pathname "ecl" :type :dll)
 		"c/main.@OBJEXT@"
 		(compile-file-pathname "ecl" :type :lib)
 		#+boehm-gc "-lgc"
-		"-lgmp" "--no-undefined"))
+		"-lgmp"
+		. #.(unless (equalp "@LDINSTALLNAME@" "")
+			'("@LDINSTALLNAME@"))))
 
 ;;;
 ;;; * Compile, load and link Common-Lisp to C compiler
