When the user supplies a value for LDFLAGS, include it in SHARED_LDFLAGS and BUNDLE_LDFLAGS. The GMP library and the Boehm-Weiser garbage collector need not be included in CLIBS.

--- a/src/cmp/cmpcfg.lsp.in
+++ b/src/cmp/cmpcfg.lsp.in
@@ -5,7 +5,7 @@
 (in-package "COMPILER")
 (setq *cc* "@ECL_CC@")
 (setq *cc-flags* "@CFLAGS@ @LSPCFLAGS@")
-(setq *ld-flags* "@LDRPATH@ @LDFLAGS@ -lecl @CLIBS@")
+(setq *ld-flags* "@LDRPATH@ @LDFLAGS@ -lecl -lgmp -lgc @CLIBS@")
 #+dlopen
 (setq *ld-shared-flags* "@LDRPATH@ @SHARED_LDFLAGS@ @LDFLAGS@ -lecl @CLIBS@")
 #+dlopen
