--- a/src/compile.lsp.in
+++ b/src/compile.lsp.in
@@ -71,7 +71,7 @@ cd ..; rm -rf tmp/* @LIBPREFIX@{lsp,clos} "))
 ;;
 ;; We do not need the -rpath flag for the library, nor -lecl.
 ;;
-(let ((c::*ld-shared-flags* "@SHARED_LDFLAGS@ @CLIBS@"))
+(let ((c::*ld-shared-flags* "@SHARED_LDFLAGS@ -lgmp -lgc @CLIBS@"))
   (c::shared-cc (compile-file-pathname "ecl" :type :dll)
 		"c/main.@OBJEXT@"
 		(compile-file-pathname "ecl" :type :lib)
