Implemented locking on hash tables and packages. Fixed several floating point contagion bugs in +, -, /, *, and ROUND.

--- a/src/lsp/load.lsp.in
+++ b/src/lsp/load.lsp.in
@@ -35,12 +35,12 @@
   "@abs_srcdir@/ffi.lsp"
 #+ffi
   "@abs_srcdir@/ffi-objects.lsp"
-; #+threads
-;  "@abs_srcdir@/thread.lsp"
 #+tk
   "@abs_srcdir@/tk-init.lsp"
   "@abs_builddir@/config.lsp"
-  "@abs_srcdir@/top.lsp"))
+  "@abs_srcdir@/top.lsp"
+  "@abs_srcdir@/mp.lsp"
+))
 
 (mapc #'(lambda (x) (load x :verbose nil)) (cddddr +lisp-module-files+))
 
