Remove debugging statement

--- a/src/bare.lsp.in
+++ b/src/bare.lsp.in
@@ -35,7 +35,7 @@
 ;;;
 #-threads
 (defmacro c::with-lock ((lock) &body body)
-  (print `(progn ,@body)) )
+  `(progn ,@body))
 (load #+(or cross ecl-min) "@abs_builddir@/cmp/load.lsp"
       #-(or cross ecl-min) "@abs_builddir@/cmp.so")
 
