--- a/src/gc/configure.in
+++ b/src/gc/configure.in
@@ -20,6 +20,7 @@ dnl Process this file with autoconf to produce configure.
 AC_INIT(gc,6.2,Hans.Boehm@hp.com) 
     ## version must conform to [0-9]+[.][0-9]+(alpha[0-9]+)?
 AC_CONFIG_SRCDIR(gcj_mlc.c)
+AC_CONFIG_AUX_DIR(${srcdir}/../gmp)
 AC_CANONICAL_TARGET 
 AC_PREREQ(2.53)
 AC_REVISION($Revision$)
